--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     {% if title %}
-        <title>{{title}} ----- Microblog</title>
+        <title>{{title}}-Microblog</title>
     {% else %}
         <title>Welcome my Microblog</title>
     {% endif %}
@@ -15,6 +15,7 @@
         {%  if current_user.is_anonymous %}
             <a href=" {{ url_for('login') }} ">Login</a>
         {% else %}
+            <a href=" {{ url_for('user', username=current_user.username) }} ">Profile</a>
             <a href=" {{ url_for('logout') }} ">Logout</a>
         {% endif %}
     </div>
